<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Levon</string>
    <string name="btn_listen">Listen</string>
    <string name="btn_send">Send</string>
    <string name="btn_hospital">Hospital</string>
    <string name="btn_helicopter">Helicopter</string>
    <string name="btn_ambulance">Ambulance</string>
    <string name="btn_checkpoint">Checkpoint</string>
    <string name="btn_back">Back</string>
    <string name="select_role">Select your role:</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_hospital">HospitalActivity</string>
    <string name="title_activity_ambulance">AmbulanceActivity</string>
    <string name="title_activity_checkpoint">CheckpointActivity</string>
    <string name="title_activity_helicopter">HelicopterActivity</string>
    <string name="hospital">Hospital</string>
    <string name="helicopter">Helicopter</string>
    <string name="ambulance">Ambulance</string>
    <string name="checkpoint">Checkpoint</string>
    <string name="mainlayout">MainLayout</string>
    <string name="ambulancelayout">AmbulanceLayout</string>
    <string name="hospitallayout">HospitalLayout</string>
    <string name="checkpointlayout">CheckpointLayout</string>
    <string name="helicopterlayout">HelicopterLayout</string>
    <string name="fake_message">Fake Message</string>
    <string name="fake_certificate">Fake Certificate</string>
    <string name="info">Info</string>
	<string name="close">Close</string>
</resources>
