<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        style="@style/TextStyle"
        android:id="@+id/textView1"
        android:text="@string/select_role"/>

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/btn_ambulance"
        android:layout_below="@+id/textView1"
        android:text="@string/btn_ambulance" />

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/btn_checkpoint"
        android:layout_below="@+id/btn_ambulance"
        android:text="@string/btn_checkpoint" />

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/btn_hospital"
        android:layout_below="@+id/btn_checkpoint"
        android:text="@string/btn_hospital" />

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/btn_helicopter"
        android:layout_below="@+id/btn_hospital"
        android:text="@string/btn_helicopter" />

</RelativeLayout>