<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ambulancelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.levon.ui.AmbulanceActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ambulance" />
    <CheckBox
        android:id="@+id/check_fake_ambulance_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fake_message"
        android:checked="false" />
    <CheckBox
        android:id="@+id/check_fake_ambulance_cert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fake_certificate"
        android:checked="false" />
    <Button
        android:id="@+id/btn_back_ambulance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/btn_back" />

</LinearLayout>
